--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "hivebridge",
-    "version": "1.0.0",
-    "description": "A modern web application built with Parse Server and TypeScript",
+    "version": "0.1.0",
+    "description": "HiveBridge backend for collaborative AI development in healthcare.",
     "main": "dist/index.js",
     "engines": {
-        "node": ">=22.0.0"
+        "node": ">=18.20.4 <19.0.0 || >=20.18.0 <21.0.0 || >=22.12.0 <23.0.0"
     },
     "scripts": {
         "start": "node dist/index.js",
@@ -12,19 +12,27 @@
         "build": "tsc",
         "test": "jest",
         "test:watch": "jest --watch",
-        "lint": "eslint . --ext .ts",
-        "lint:fix": "eslint . --ext .ts --fix",
+        "lint": "eslint . --cache --ext .ts",
+        "lint:fix": "eslint . --cache --ext .ts --fix",
         "format": "prettier --write \"src/**/*.ts\"",
-        "prepare": "husky install",
+        "prepare": "husky",
         "setup": "nvm install && nvm use"
     },
     "keywords": [
+        "collaborative-ai",
+        "privacy-preserving",
+        "federated-learning",
         "parse-server",
         "typescript",
+        "express",
+        "eslint",
+        "jest",
+        "prettier",
+        "low-code",
         "nodejs",
         "web-application"
     ],
-    "author": "",
+    "author": "Yumcoder (Omid)",
     "license": "MIT",
     "dependencies": {
         "dotenv": "^16.5.0",
@@ -45,11 +53,19 @@
         "eslint-plugin-prettier": "5.3.1",
         "husky": "9.1.7",
         "jest": "^29.7.0",
+        "lint-staged": "^15.5.1",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.1",
         "ts-jest": "^29.1.1",
+        "tsconfig-paths": "^4.2.0",
         "tsx": "4.19.4",
-        "typescript": "^5.3.3",
-        "tsconfig-paths": "^4.2.0"
+        "typescript": "^5.3.3"
+    },
+    "lint-staged": {
+        "**/*.{ts,tsx,js}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "**/*.{json,md}": "prettier --write"
     }
 }
