--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "description": "HiveBridge backend for collaborative AI development in healthcare.",
     "main": "dist/index.js",
+    "type": "module",
     "engines": {
         "node": ">=18.20.4 <19.0.0 || >=20.18.0 <21.0.0 || >=22.12.0 <23.0.0"
     },
