fix: update MongoDB database name in .env.test and enhance buildMongoURI function with authSource and replicaSet support

--- a/.env.test
+++ b/.env.test
@@ -14,7 +14,7 @@ APP_NAME="parse"
 # MongoDB Configuration
 #
 # MONGO_REPLICA_SET="rs0"
-MONGO_DB_NAME="hivebridge"
+MONGO_DB_NAME="db_test"
 # MONGO_USER="sysAdmin"
 # MONGO_PASS="yum"
 MONGO_HOST="127.0.0.1"
