feat: integrate Parse Dashboard with Express app and update configuration

--- a/.env.test
+++ b/.env.test
@@ -8,7 +8,7 @@
 NODE_ENV="test"
 
 # Application name (used for DB name and paths)
-APP_NAME="parse"
+APP_NAME="hivebridge"
 
 #
 # MongoDB Configuration
