--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "dotenv-expand": "^12.0.2",
         "express": "5.1.0",
         "parse": "^6.1.1",
+        "parse-dashboard": "^7.1.0",
         "parse-server": "8.2.0"
     },
     "devDependencies": {
